--- a/server/package.json
+++ b/server/package.json
@@ -23,10 +23,11 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
+    "@nestjs/serve-static": "^3.0.0",
     "command-line-args": "^5.1.3",
-    "glob": "^8.1.0"
+    "glob": "^8.1.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.0.1",
